--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "pytest-asyncio>=0.23,<1.0",
     "pytest-httpx>=0.29,<1.0", # Add pytest-httpx
     "ruff>=0.3,<1.0", # Add ruff
+    "datamodel-code-generator[http]>=0.25,<1.0", # Add datamodel-code-generator with http extras
 ]
 
 [tool.pytest.ini_options]
