--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dev = [
     "pytest>=8.0,<9.0",
     "pytest-asyncio>=0.23,<1.0",
     "pytest-httpx>=0.29,<1.0", # Add pytest-httpx
-    "ruff>=0.3,<1.0", # Add ruff
+    "ruff==0.11.2", # Pin ruff version for consistency
     "datamodel-code-generator[http]>=0.25,<1.0", # Add datamodel-code-generator with http extras
 ]
 
