--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "brreg-wrapper"
-version = "0.1.3"
+version = "0.1.4"
 description = "A Python wrapper for the Brønnøysund Register Centre (Brreg) API."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -20,6 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "httpx>=0.27,<1.0",
+    "pydantic>=2.0,<3.0", 
 ]
 
 [project.urls]
