--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "brreg-wrapper"
-version = "0.1.8"
+version = "0.2.0"
 description = "A Python wrapper for the Brønnøysund Register Centre (Brreg) API."
 readme = "README.md"
 requires-python = ">=3.13"
@@ -21,6 +21,7 @@ classifiers = [
 dependencies = [
     "httpx>=0.27,<1.0",
     "pydantic>=2.0,<3.0", 
+    "tenacity>=8.2,<9.0", # Added for retry logic
 ]
 
 [project.urls]
@@ -34,6 +35,12 @@ dev = [
     "pytest-httpx>=0.29,<1.0", # Add pytest-httpx
     "ruff==0.11.2", # Pin ruff version for consistency
     "datamodel-code-generator[http]>=0.25,<1.0", # Add datamodel-code-generator with http extras
+]
+http2 = [
+    "h2>=4.0,<5.0", # HTTP/2 support
+]
+all = [
+    "h2>=4.0,<5.0", # HTTP/2 support
 ]
 
 [tool.pytest.ini_options]
